--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "formidable": "^3.5.4",
+    "googleapis": "^166.0.0",
     "next": "16.0.1",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
